--- a/index.html
+++ b/index.html
@@ -1,30 +1,61 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Primera página web de un sociólogo en formación, para practicar las habilidades en desarollo web. NO tendrá contenido pero sí un formato bonito"
+    />
     <title>Mi Página</title>
-    <link rel="stylesheet" href="/styles/style.css">
-</head>
-<body>
-    <header>
-        <nav>
-            <ul>
-                <li><a href="#">Inicio</a></li>
-                <li><a href="#">Acerca de</a></li>
-                <li><a href="#">Servicios</a></li>
-                <li><a href="#">Contacto</a></li>
-            </ul>
-        </nav>
+    <link rel="stylesheet" href="/styles/style.css" />
+  </head>
+  <body>
+    <header class="full-bleed dark-blue">
+      <h1 class="header-logo">Header Logo</h1>
+      <nav>
+        <ul class="nav-links">
+          <li><a href="#">header link one</a></li>
+          <li><a href="#">header link two</a></li>
+          <li><a href="#">header link three</a></li>
+        </ul>
+      </nav>
     </header>
-
     <main>
-        <h1>CSS package for Editor Add-ons</h1>
-        <p>Esta es una página estática básica en español.</p>
+      <section>
+        <h1>This website is awesome</h1>
+        <p>
+          This website has some subtext that subtly hints at a deeper narrative.
+          The design elements and choice of colors weave a story of innovation
+          and creativity, showcasing a unique blend of modernity and tradition.
+          Each page is meticulously crafted, reflecting the dedication to detail
+          and a passion for excellence in presentation.
+        </p>
+        <button type="button">Sign up</button>
+        <img alt="This is a placeholder for an image" />
+      </section>
+      <section>
+        <h2 class="info-header">Some random information</h2>
+        <div class="cards"></div>
+      </section>
+      <section>
+        <p class="quote">
+          This is an inspiring quote meant to spark motivation and profound
+          insight. Let it be a beacon that guides you through challenges,
+          illuminating your path with wisdom and resilience. Embrace the journey
+          ahead, fortified with the lessons of the past and the promise of a
+          brighter tomorrow.
+        </p>
+        <p>-Thor, God of Thunder</p>
+      </section>
+      <div>
+        <p>Call to action! It's time!</p>
+        <p>Sign up for our product by clicking the button right over there.</p>
+        <button type="button">Sign up</button>
+      </div>
     </main>
-
     <footer>
-        <p>&copy; 2022 Mi Página. Todos los derechos reservados.</p>
+      <p>&copy; 2022 Mi Página. Todos los derechos reservados.</p>
     </footer>
-</body>
+  </body>
 </html>
