--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -54,7 +55,14 @@
           <div class="card">
             <p>This is some subtext under an ilustration or image</p>
           </div>
-        </div> <!-- Cierre para el div con la clase "card-container" -->
+          <div class="card">
+            <p>This is some subtext under an ilustration or image</p>
+          </div>
+          <div class="card">
+            <p>This is some subtext under an ilustration or image</p>
+          </div>
+        </div>
+      </div> <!-- Cierre para el div con la clase "card-container" -->
       </div> <!-- Cierre para el div con la clase "container-w" -->
     </section>
     <section class="wrapper-g">
@@ -72,7 +80,8 @@
     </section>
     <section class="lb-container">
       <p>Call to action! It's time!</p>
-      <p>Sign up for our product by clicking the button right over there.</p>
+      <p>Sign up for our product by clicking the button right over
+        there.</p>
       <button type="button">Sign up</button>
     </section>
   </main>
