Add image and give format

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           </p>
           <button type="button">Sign up</button>
         </div>
-        <img alt="This is a placeholder for an image" />
+        <img  class="img-tittle" alt="This is a placeholder for an image" src="/images/shibuya-crossing.jpg" />
       </div>
       </div>
     </section>
