Actualización de la función de búsqueda

--- a/index.html
+++ b/index.html
@@ -1,94 +1,90 @@
 <!DOCTYPE html>
 <html lang="es">
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta
+      name="description"
+      content="Primera página web de un sociólogo en formación, para practicar las habilidades en desarollo web. NO tendrá contenido pero sí un formato bonito">
+    <title>Mi Página</title>
+    <link rel="stylesheet" href="/styles/style.css">
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description"
-    content="Primera página web de un sociólogo en formación, para practicar las habilidades en desarollo web. NO tendrá contenido pero sí un formato bonito" />
-  <title>Mi Página</title>
-  <link rel="stylesheet" href="/styles/style.css" />
-</head>
-
-<body>
-  <header class="db-wrapper">
-    <div class="header">
-      <h1 class="header-logo">Header Logo</h1>
-      <nav>
-        <ul class="nav-links">
-          <li><a href="#">header link one</a></li>
-          <li><a href="#">header link two</a></li>
-          <li><a href="#">header link three</a></li>
-        </ul>
-      </nav>
-    </div>
-  </header>
-  <main class="main-wrapper">
-    <section class="db-wrapper">
-      <div class="container-presentation">
-        <div class="presentation-text">
-          <h1>Some random website</h1>
-          <p>
-            This website has some subtext that subtly hints at a deeper
-            narrative.
-            The design elements and choice of colors weave a story of
-            innovation
-            and creativity, showcasing a unique blend of modernity and
-            tradition.
-            Each page is meticulously crafted, reflecting the dedication to
-            detail
-            and a passion for excellence in presentation.
+  <body>
+    <header class="db-wrapper">
+      <div class="header">
+        <p class="header-logo">Header Logo</p>
+        <nav>
+          <ul class="nav-links">
+            <li><a href="#">header link one</a></li>
+            <li><a href="#">header link two</a></li>
+            <li><a href="#">header link three</a></li>
+          </ul>
+        </nav>
+      </div>
+    </header>
+    <main class="main-wrapper">
+      <section class="db-wrapper">
+        <div class="container-presentation">
+          <div class="presentation-text">
+            <h1>Some random website</h1>
+            <p>
+              This website has some subtext that subtly hints at a deeper
+              narrative. The design elements and choice of colors weave a story
+              of innovation and creativity, showcasing a unique blend of
+              modernity and tradition. Each page is meticulously crafted,
+              reflecting the dedication to detail and a passion for excellence
+              in presentation.
+            </p>
+            <button type="button">Sign up</button>
+          </div>
+          <img
+            class="img-tittle"
+            src="/images/shibuya-crossing.jpg"
+            title="Shibuya Crossing">
+        </div>
+      </section>
+      <section class="wrapper-w">
+        <div class="container-w">
+          <h2 class="info-header">Some random information</h2>
+          <div class="card-container">
+            <div class="card">
+              <p>This is some subtext under an ilustration or image</p>
+            </div>
+            <div class="card">
+              <p>This is some subtext under an ilustration or image</p>
+            </div>
+            <div class="card">
+              <p>This is some subtext under an ilustration or image</p>
+            </div>
+            <div class="card">
+              <p>This is some subtext under an ilustration or image</p>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="wrapper-g">
+        <div class="container-g">
+          <p class="quote">
+            This is an inspiring quote meant to spark motivation and profound
+            insight. Let it be a beacon that guides you through challenges,
+            illuminating your path with wisdom and resilience. Embrace the
+            journey ahead, fortified with the lessons of the past and the
+            promise of a brighter tomorrow.
           </p>
-          <button type="button">Sign up</button>
+          <p>-Thor, God of Thunder</p>
         </div>
-        <img  class="img-tittle" alt="This is a placeholder for an image" src="/images/shibuya-crossing.jpg" />
-      </div>
-      </div>
-    </section>
-    <section class="wrapper-w">
-      <div class="container-w">
-        <h2 class="info-header">Some random information</h2>
-        <div class="card-container">
-          <div class="card">
-            <p>This is some subtext under an ilustration or image</p>
-          </div>
-          <div class="card">
-            <p>This is some subtext under an ilustration or image</p>
-          </div>
-          <div class="card">
-            <p>This is some subtext under an ilustration or image</p>
-          </div>
-          <div class="card">
-            <p>This is some subtext under an ilustration or image</p>
-          </div>
-        </div>
-      </div> <!-- Cierre para el div con la clase "card-container" -->
-      </div> <!-- Cierre para el div con la clase "container-w" -->
-    </section>
-    <section class="wrapper-g">
-      <div class="container-g ">
-        <p class="quote">
-          This is an inspiring quote meant to spark motivation and profound
-          insight. Let it be a beacon that guides you through challenges,
-          illuminating your path with wisdom and resilience. Embrace the
-          journey
-          ahead, fortified with the lessons of the past and the promise of a
-          brighter tomorrow.
-        </p>
-        <p>-Thor, God of Thunder</p>
-      </div>
-    </section>
-    <section class="lb-container">
-      <p>Call to action! It's time!</p>
-      <p>Sign up for our product by clicking the button right over
-        there.</p>
-      <button type="button">Sign up</button>
-    </section>
-  </main>
-  <footer class="db-wrapper">
-    <p class="copyright">&copy; 2022 Mi Página. Todos los derechos
-      reservados.</p>
-  </footer>
-</body>
-
+      </section>
+      <section class="lb-container">
+        <p>Call to action! It's time!</p>
+        <p>Sign up for our product by clicking the button right over there.</p>
+        <button type="button">Sign up</button>
+      </section>
+    </main>
+    <footer class="db-wrapper">
+      <p class="copyright">
+        &copy; 2022 Mi Página. Todos los derechos reservados.
+      </p>
+    </footer>
+  </body>
 </html>
