Actualizar estilo y formato de elementos de tarjetas

--- a/index.html
+++ b/index.html
@@ -92,7 +92,9 @@
                         with the lessons of the past and the promise of a
                         brighter tomorrow.
                     </p>
-                    <p>-Thor, God of Thunder</p>
+                    <p style="font-weight: bold; text-align: right">
+                        -Thor, God of Thunder
+                    </p>
                 </div>
             </section>
             <section class="lb-container">
