--- a/index.html
+++ b/index.html
@@ -98,12 +98,16 @@
                 </div>
             </section>
             <section class="lb-container">
-                <p>Call to action! It's time!</p>
-                <p>
-                    Sign up for our product by clicking the button right over
-                    there.
-                </p>
-                <button type="button">Sign up</button>
+                <div class="wrap-call">
+                    <div>
+                        <p>Call to action! It's time!</p>
+                        <p>
+                            Sign up for our product by clicking the button right
+                            over there.
+                        </p>
+                    </div>
+                    <button type="button">Sign up</button>
+                </div>
             </section>
         </main>
         <footer class="db-wrapper">
