--- a/index.html
+++ b/index.html
@@ -97,11 +97,11 @@
                     </p>
                 </div>
             </section>
-            <section class="lb-container">
-                <div class="wrap-call">
+            <section class="call-wraper">
+                <div class="container-call">
                     <div>
-                        <p>Call to action! It's time!</p>
-                        <p>
+                        <p class="tittle">Call to action! It's time!</p>
+                        <p class="text">
                             Sign up for our product by clicking the button right
                             over there.
                         </p>
