--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta
-            name="description"
+            name="Awesome website"
             content="Primera página web de un sociólogo en formación, para practicar las habilidades en desarollo web. NO tendrá contenido pero sí un formato bonito"
         />
         <title>Mi Página</title>
-        <link rel="stylesheet" href="/styles/style.css" />
+        <link rel="stylesheet" href="./styles/style.css" />
     </head>
 
     <body>
