Actualizar ruta de imagen en index.html

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     </div>
                     <img
                         class="img-tittle"
-                        src="/images/shibuya-crossing.jpg"
+                        src="./images/shibuya-crossing.jpg"
                         title="Shibuya Crossing"
                     />
                 </div>
